--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -63,7 +63,7 @@
                                                 <div class="panel-body">
                                                     <div class="pull-left">
                                                         <a href="#">
-                                                            <img class="media-object img-circle" style="margin-right:8px; margin-top:-5px;" <%= image_tag comment.user.avatar.url, height:50, width:50 %>
+                                                          <%= image_tag comment.user.avatar.url, height:50, width:50,style:"height:50px !important;" %>
                                                         </a>
                                                     </div>
                                                     <h4>
