--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -176,12 +176,12 @@
                               <div>
                                 <%= render "reviews/like", object: comment %>
                               </div>
-                              <% if current_user == comment.user %>
-                                <div class="text-right">
-                                  <a href="#"><span class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></span></a> |
-                                  <a href="#"><span class="fa fa-trash-o fa-lg" aria-hidden="true"></span></a>
-                                </div>
-                              <% end %>
+                              <%# if current_user == comment.user %>
+<!--                                <div class="text-right">-->
+<!--                                  <a href="#"><span class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></span></a> |-->
+<!--                                  <a href="#"><span class="fa fa-trash-o fa-lg" aria-hidden="true"></span></a>-->
+<!--                                </div>-->
+                              <%# end %>
                             </div>
                           </div>
                         </div>
