--- a/app/views/manage/games/index.html.erb
+++ b/app/views/manage/games/index.html.erb
@@ -1,60 +1,60 @@
-<aside class="main-sidebar">
-  <!-- sidebar: style can be found in sidebar.less -->
-  <section class="sidebar">
-    <!-- Sidebar user panel -->
-    <!-- /.search form -->
-    <!-- sidebar menu: : style can be found in sidebar.less -->
-    <ul class="sidebar-menu" data-widget="tree">
-      <li class="header">MAIN NAVIGATION</li>
-       <!--<%= form_tag manage_search_game_path, :method => 'get', :class => "sidebar-form" do %>
-        <div class="input-group">
-          <span class="input-group-btn">
-          <%= text_field_tag :search_game, params[:search_game], :value => "", :class => "form-control", placeholder: "Search..." %>
-            <%= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>
-        </span>
-        </div>
-      <% end %>-->
-      <li>
-        <%= link_to manage_path do %>
-        <li class="active">
-          <i class="fa fa-th"></i>
-          <span>Report</span>
+<!--<aside class="main-sidebar">-->
+<!--  <!-- sidebar: style can be found in sidebar.less -->
+<!--  <section class="sidebar">-->
+<!--    <!-- Sidebar user panel -->
+<!--    <!-- /.search form -->
+<!--    <!-- sidebar menu: : style can be found in sidebar.less -->
+<!--    <ul class="sidebar-menu" data-widget="tree">-->
+<!--      <li class="header">MAIN NAVIGATION</li>-->
+<!--       <!--<%#= form_tag manage_search_game_path, :method => 'get', :class => "sidebar-form" do %>-->
+<!--        <div class="input-group">-->
+<!--          <span class="input-group-btn">-->
+          <%#= text_field_tag :search_game, params[:search_game], :value => "", :class => "form-control", placeholder: "Search..." %>
+<!--            <%#= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>-->
+<!--        </span>-->
+<!--        </div>-->
+<!--      <%# end %>-->
+<!--      <li>-->
+        <%#= link_to manage_path do %>
+<!--        <li class="active">-->
+<!--          <i class="fa fa-th"></i>-->
+<!--          <span>Report</span>-->
 
-        </li>
-        <% end %>
-      </li>
-      <li class="treeview active menu-open">
-        <a href="#">
-          <i class="fa fa-files-o"></i>
-          <span>Manage</span>
-        </a>
-        <ul class="treeview-menu">
-          <li><%= link_to manage_data_path do %>
-              <i class="fa fa-circle-o"></i> Manage User
-            <% end %>
-          </li>
-          <li><%= link_to manage_reviews_path do %>
-              <i class="fa fa-circle-o"></i> Manage Review
-            <% end %>
-          </li>
-          <li><%= link_to manage_games_path do %>
-              <i class="fa fa-circle-o"></i> Manage Game
-            <% end %>
-          </li>
-          <li><%= link_to manage_genres_path do %>
-              <i class="fa fa-circle-o"></i> Manage Genre
-            <% end %>
-          </li>
-          <li><%= link_to manage_platforms_path do %>
-              <i class="fa fa-circle-o"></i> Manage Platform
-            <% end %>
-          </li>
-        </ul>
-      </li>
-    </ul>
-  </section>
-  <!-- /.sidebar -->
-</aside>
+<!--        </li>-->
+        <%# end %>
+<!--      </li>-->
+<!--      <li class="treeview active menu-open">-->
+<!--        <a href="#">-->
+<!--          <i class="fa fa-files-o"></i>-->
+<!--          <span>Manage</span>-->
+<!--        </a>-->
+<!--        <ul class="treeview-menu">-->
+<!--          <li><%#= link_to manage_data_path do %>-->
+<!--              <i class="fa fa-circle-o"></i> Manage User-->
+            <%# end %>
+<!--          </li>-->
+<!--          <li><%#= link_to manage_reviews_path do %>-->
+<!--              <i class="fa fa-circle-o"></i> Manage Review-->
+            <%# end %>
+<!--          </li>-->
+<!--          <li><%#= link_to manage_games_path do %>-->
+<!--              <i class="fa fa-circle-o"></i> Manage Game-->
+            <%# end %>
+<!--          </li>-->
+<!--          <li><%#= link_to manage_genres_path do %>-->
+<!--              <i class="fa fa-circle-o"></i> Manage Genre-->
+            <%# end %>
+<!--          </li>-->
+<!--          <li><%#= link_to manage_platforms_path do %>-->
+<!--              <i class="fa fa-circle-o"></i> Manage Platform-->
+            <%# end %>
+<!--          </li>-->
+<!--        </ul>-->
+<!--      </li>-->
+<!--    </ul>-->
+<!--  </section>-->
+<!--  <!-- /.sidebar -->-->
+<!--</aside>-->
 <div class="content-wrapper">
   <!-- Content Header (Page header) -->
   <section class="content-header">
