--- a/app/views/manage/reviews/index.html.erb
+++ b/app/views/manage/reviews/index.html.erb
@@ -1,16 +1,16 @@
 
 <div class="content-wrapper">
   <!-- Content Header (Page header) -->
-  <!--  <section class="content-header">-->
-  <!--    <h1>-->
-  <!--      Game Search-->
-  <!--    </h1>-->
-  <!--    <ol class="breadcrumb">-->
-  <!--      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>-->
-  <!--      <li><a href="#">Tables</a></li>-->
-  <!--      <li class="active">Data tables</li>-->
-  <!--    </ol>-->
-  <!--  </section>-->
+  <section class="content-header">
+    <!--    <h1>-->
+    <!--      GAME TABLE-->
+    <!--    </h1>-->
+    <!--    <ol class="breadcrumb">-->
+    <!--      <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>-->
+    <!--      <li><a href="#">Tables</a></li>-->
+    <!--      <li class="active">Data tables</li>-->
+    <!--    </ol>-->
+  </section>
 
   <!-- Main content -->
   <section class="content">
@@ -18,7 +18,7 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title"><strong>Search Results</strong></h3>
+            <h3 class="box-title"><strong>REVIEW TABLE</strong></h3>
           </div>
           <% flash.each do |key, value| %>
             <div class="alert-manage-game alert alert-<%= key %>"><%= value %></div>
@@ -29,52 +29,37 @@
             <table id="example1" class="table table-bordered table-striped">
               <thead>
               <tr>
-                <th>Name</th>
-                <th>Genere</th>
-                <th>Platform</th>
-                <th>Rating Score</th>
-                <th>Reviews</th>
+                <th>Id</th>
+                <th>Title</th>
+                <th>Author</th>
+                <th>Created At</th>
                 <th>Action</th>
               </tr>
               </thead>
               <tbody>
-              <% @search_results.each do |game| %>
+              <% @reviews.each do |review| %>
                 <tr>
-                  <td><%= link_to game_detail_path(:id => game.id) do %>
-                      <%= game.name %></td>
+                  <td><%= review.id %></td>
+                  <td>
+                    <%= link_to review_path(id: review.id), method: :get do %>
+                      <% if review.title != nil %>
+                        <%= review.title %>
+                      <% else %>
+                        No title
+                      <% end %>
                     <% end %>
-                    <td>
-                      <% game.genres_of_game.each_with_index do |genre, index| %>
-                        <%= index == 0 ? "" : "," %>
-                        <%= link_to game_game_list_of_genre_path(genre: genre.name) do %>
-                          <%= genre.name %>
-                        <% end %>
-                      <% end %>
-                    </td>
-                    <td>
-                      <% game.platform_of_game.each_with_index do |platform, index| %>
-                        <%= index == 0 ? "" : "," %>
-                        <%= link_to game_game_list_of_platform_path(platform: platform.name) do %>
-                          <%= platform.name %>
-                        <% end %>
-                      <% end %>
-                    </td>
-                    <td><%= get_rate_average(game) %></td>
-                    <td><%= game.reviews.count() %></td>
-                    <td>
+                  </td>
+                  <td>
+                    <%= link_to user_profile_home_path(id: review.user.id) do %>
+                      <%= review.user.full_name %>
+                    <% end %>
+                  </td>
+                  <td><%= review.created_at.to_date() %></td>
+                  <td>
+                    <%= link_to "Delete", manage_review_path(id: review.id), method: :delete, class: "btn btn-danger", data: {confirm: 'Are you sure?'} %>
+                  </td>
 
-                      <%= link_to "#", class: "btn btn-info",
-                                  data: {
-                                      toggle: "modal",
-                                      url: edit_manage_game_path(game.id),
-                                      target: "#game-form-edit"} do
-                      %>
-                        Edit
-                      <% end %>
-                      <%= link_to "Delete", manage_game_path(game), method: :delete, class: "btn btn-danger", data: {confirm: 'Are you sure?'} %>
-                    </td>
-
-                    </tr>
+                </tr>
               <% end %>
 
               </tfoot>
