--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -40,7 +40,7 @@
                 | <i class="fa fa-trash-o fa-lg" aria-hidden="true"></i>
               <% end %>
               </strong>
-            <% elsif current_user.is_admin %>
+            <% elsif user_signed_in? && current_user.is_admin %>
               <%= link_to manage_comment_path(id: comment.id), method: :delete, data: {confirm: 'Are you sure?'}, remote: true do %>
                 | <i class="fa fa-trash-o fa-lg" aria-hidden="true"></i>
               <% end %>
