resize edit-comment textarea

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -10,6 +10,10 @@
     width: 800px;
 }
 
+.mytextarea {
+  width: 100%;
+}
+
 .add-commit-button {
 	margin-right: 25px;
     border-top-right-radius: 30px !important;
