--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -77,13 +77,13 @@
             <div class="create_review_button">
               <% if user_signed_in? and @game.reviews.where(user_id: current_user.id).count != 0 %>
 
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModalEdit">
                   Edit your Review
                 </button>
               <% else %>
                 <% @review = Review.new %>
                 <!-- <button type="button" class="btn btn-danger">Create New Review</button> -->
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModal">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#basicExampleModalCreate">
                   Create New Review
                 </button>
 
@@ -135,7 +135,7 @@
                     <span ><%= review.title %></span>
                   </div> -->
                   <div class="col-md-12 ">
-                    <div class="fix-content-review-space" style="margin: 20px 0px 15px 0px !important"><%= raw review.content[0..1000] + "....." %></div>
+                    <div class="fix-content-review-space" style="margin: 20px 0px 15px 0px !important"><%= truncate(review.content, length: 100) %></div>
                     <div>
                       <%= render "reviews/like", object: review %>
 
@@ -144,11 +144,11 @@
                           Full Review
                         <% end %></strong>
                       <% if current_user == review.user %>
-                        <a data-toggle="modal" data-target="#basicExampleModal">
+                        <a data-toggle="modal" data-target="#basicExampleModalEdit">
                           Edit
                         </a>
                         <strong>
-                          <%= link_to review_path(id: review.id), method: :delete do %> Delete
+                          <%= link_to review_path(id: review.id), data: {confirm: 'Are you sure?'}, method: :delete do %> Delete
                           <% end %>
                         </strong>
                       <% end %>
@@ -209,7 +209,7 @@
 
 
 <!-- Modal -->
-<div class="modal fade" id="basicExampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="basicExampleModalCreate" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog create_review_modal" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -242,15 +242,61 @@
             <!-- <textarea class="form-control" rows="5" id="comment"></textarea> -->
             <%= f.cktext_area :content, placeholder: @review.content, class: "form-control", required: "required" %>
           </div>
-          <%= f.submit "Create", class: "btn btn-primary" %>
+          <%= f.submit "Save", class: "btn btn-primary" %>
         <% end %>
 
 
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+<!--      <div class="modal-footer">-->
+<!--        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
+<!--        <button type="button" class="btn btn-primary">Save changes</button>-->
+<!--      </div>-->
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="basicExampleModalEdit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog create_review_modal" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel"><strong>Edit Review</strong></h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
+      <div class="modal-body">
+
+        <%= form_for @review do |f| %>
+          <div class="form-group">
+            <label for="title">Title</label>
+            <!-- <input type="text" class="form-control" id="title"> -->
+            <%= f.text_field :title, placeholder: @review.title, class: "form-control", required: "required" %>
+          </div>
+          <div class="form-group">
+            <div class="star-rating-form">
+              <span class="fa fa-star-o" data-rating="1"></span>
+              <span class="fa fa-star-o" data-rating="2"></span>
+              <span class="fa fa-star-o" data-rating="3"></span>
+              <span class="fa fa-star-o" data-rating="4"></span>
+              <span class="fa fa-star-o" data-rating="5"></span>
+              <%= f.number_field :rating, class: "rating-value", type: "hidden" %>
+            </div>
+          </div>
+          <%= hidden_field_tag :game_id, @game.id %>
+          <div class="form-group">
+            <!-- <label for="content">Contents</label> -->
+            <!-- <textarea class="form-control" rows="5" id="comment"></textarea> -->
+            <%= f.cktext_area :content, placeholder: @review.content, class: "form-control", required: "required" %>
+          </div>
+          <%= f.submit "Save", class: "btn btn-primary" %>
+        <% end %>
+
+
+      </div>
+      <!--      <div class="modal-footer">-->
+      <!--        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>-->
+      <!--        <button type="button" class="btn btn-primary">Save changes</button>-->
+      <!--      </div>-->
     </div>
   </div>
 </div>
