--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,7 +2,7 @@
 <div id="about">
   <div class="container">
     <div class="row">
-      <div class="col-md-11 fix-pading-content">
+      <div class="col-md-9 fix-pading-content">
         <h2>Search Result for <b><%= params[:search] %></b></h2>
         <div class="col-md-12 fix-padding-content">
           <%= form_tag url_for(:controller => 'search', :action => 'advance_search'), :method => 'get' do %>
@@ -49,8 +49,8 @@
                 </div>
                 <div class="col-xs-12 col-md-8 content-game-home-page">
                   <div class="about-text col-md-12">
-                    <h3><%= link_to game_detail_path(id: game.id) do %> <%= game.name %>
-                      <% end %> </h3>
+                    <%= link_to game_detail_path(id: game.id),{:class=>"name_game"}  do %> <%= game.name %>
+                      <% end %>
                   </div>
                   <div class="col-xs-12 col-md-6">
                     <b>Release date: <%= game.relase_date.to_date %> </b>
