--- a/app/assets/stylesheets/gameshousai.scss
+++ b/app/assets/stylesheets/gameshousai.scss
@@ -104,7 +104,7 @@ hr {
   margin: 9px 20px 0 20px;
 }
 #menu.navbar-default .navbar-nav > li > a:hover {
-  color: #b8b9ad !important;
+  color: blue !important;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
   color: #ce2a36 !important;
@@ -638,4 +638,10 @@ a:hover {
 
 input#comment_content {
     color: black;
+}
+
+
+.dropdown-menu > li > a:hover,.dropdown-menu > a:hover {
+  text-decoration: none;
+  color:blue !important;
 }
