--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="col-md-2">
         <%= link_to root_path, class: "navbar-brand logo-header" do %>
-          <img src="/assets/logo.jpg" alt="logo">
+          <img src="/assets/log.png" alt="logo">
         <% end %>
       </div>
       <div class="col-md-10" id="bs-example-navbar-collapse-1 ">
