--- a/app/assets/stylesheets/gameshousai.scss
+++ b/app/assets/stylesheets/gameshousai.scss
@@ -645,3 +645,13 @@ input#comment_content {
   text-decoration: none;
   color:blue !important;
 }
+
+.box-content {
+  border:1px solid #fff;
+}
+
+.about-text {
+  border: 1px solid #fff;
+  padding: 8px;
+  margin-top: 20px;
+}
