--- a/app/views/game/game_list_of_platform.html.erb
+++ b/app/views/game/game_list_of_platform.html.erb
@@ -31,7 +31,7 @@
 <div id="about">
   <div class="container">
     <div class="row">
-      <div class="col-md-9 fix-pading-content">
+      <div class="col-md-9 fix-pading-content box-content">
         <div class="col-md-12 fix-pading-content">
           <% if @game_list == nil %>
             <h3>No game found!</h3>
