--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -2,7 +2,7 @@
 <div id="about">
   <div class="container">
     <div class="row">
-      <div class="col-md-9 fix-pading-content">
+      <div class="col-md-9 fix-pading-content box-content">
         <h2>Search Result for <b><%= params[:search] %></b></h2>
         <div class="col-md-12 fix-padding-content">
           <%= form_tag url_for(:controller => 'search', :action => 'advance_search'), :method => 'get' do %>
@@ -48,7 +48,7 @@
                   <% end %>
                 </div>
                 <div class="col-xs-12 col-md-8 content-game-home-page">
-                  <div class="about-text col-md-12">
+                  <div class="col-md-12">
                     <%= link_to game_detail_path(id: game.id),{:class=>"name_game"}  do %> <%= game.name %>
                       <% end %>
                   </div>
@@ -62,14 +62,14 @@
                       <% end %>
                     </div>
                   </div>
-                  <div class="about-text col-md-12">
+                  <div class="col-md-12">
                     <b>Platform: </b>
                     <% game.platform_of_game.each_with_index do |platform, index| %>
                       <%= index == 0 ? "" : "," %>
                       <%= link_to platform.name, game_game_list_of_platform_path(:platform => platform.name) %>
                     <% end %>
                   </div>
-                  <div class="about-text col-md-12">
+                  <div class="col-md-12">
                     <b>Genre: </b>
                     <% game.genres_of_game.each_with_index do |genre, index| %>
                       <%= index == 0 ? "" : "," %>
