--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,9 @@
       </div>
       <div class="col-md-10" id="bs-example-navbar-collapse-1 ">
         <ul class="nav navbar-nav navbar-left">
-          <li><%= link_to "PC", game_game_list_of_platform_path(:platform => "PC"), class: "page-scroll" %></li>
-          <li><%= link_to "PS4", game_game_list_of_platform_path(:platform => "PS4"), class: "page-scroll" %></li>
-          <li><%= link_to "XBox One", game_game_list_of_platform_path(:platform => "XBOX ONE"), class: "page-scroll" %></li>
+          <li><%= link_to Platform.first.name, game_game_list_of_platform_path(:platform => Platform.first.name), class: "page-scroll"%></li>
+          <li><%= link_to Platform.second.name, game_game_list_of_platform_path(:platform => Platform.second.name), class: "page-scroll" %></li>
+          <li><%= link_to Platform.third.name, game_game_list_of_platform_path(:platform => Platform.third.name), class: "page-scroll" %></li>
           <li class="dropdown">
             <a class="dropdown-toggle dropdown-background-color" data-toggle="dropdown" href="#">MORE
               <span class="caret"></span>
