--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -81,7 +81,7 @@
   <div class="container-login100" style="background-image: url('../assets/slider/1.jpg');">
     <div class="wrap-login100">
 			<span class="login100-form-logo">
-				<img src="../assets/logo.jpg" alt="">
+				<img src="../assets/log.png" alt="">
 			</span>
       <span class="login100-form-title p-b-34 p-t-27">
 				Sign Up
