--- a/app/views/game/_game_up_comming.html.erb
+++ b/app/views/game/_game_up_comming.html.erb
@@ -1,4 +1,4 @@
-
+<div class="col-md-12" style="border: 1px solid #fff; margin-top: 20px; padding-bottom: 20px">
 <div class="col-md-12 text-center related-game ">Upcoming Game</div>
 <% @game_upcoming.each do |game| %>
     <div class="col-md-12 text-center list-related-game">
@@ -8,3 +8,4 @@
         </a>
     </div>
 <% end %>
+</div>
