--- a/app/views/game/game_list_of_genre.html.erb
+++ b/app/views/game/game_list_of_genre.html.erb
@@ -92,7 +92,7 @@
     </div>
   </div>
 </div>
-<script>
+<!-- <script>
     var owl;
     owl = $('.new-game');
     owl.owlCarousel({
@@ -103,4 +103,4 @@
         autoplayTimeout: 1000,
         autoplayHoverPause: true
     });
-</script>
+</script> -->
