--- a/app/views/game/game_list_of_platform.html.erb
+++ b/app/views/game/game_list_of_platform.html.erb
@@ -43,7 +43,7 @@
                   <% end %>
                 </div>
                 <div class="col-xs-12 col-md-8 content-game-home-page">
-                  <div class="about-text col-md-12">
+                  <div class="col-md-12">
                     <%= link_to game_detail_path(id: game.id),{:class=>"name_game"} do %> <%= game.name %>
                       <% end %>
                   </div>
@@ -57,14 +57,14 @@
                       <% end %>
                     </div>
                   </div>
-                  <div class="about-text col-md-12">
+                  <div class="col-md-12">
                     <b>Platform: </b>
                     <% game.platform_of_game.each_with_index do |platform, index| %>
                       <%= index == 0 ? "" : "," %>
                       <%= link_to platform.name, game_game_list_of_platform_path(:platform => platform.name) %>
                     <% end %>
                   </div>
-                  <div class="about-text col-md-12">
+                  <div class="col-md-12">
                     <b>Genre: </b>
                     <% game.genres_of_game.each_with_index do |genre, index| %>
                       <%= index == 0 ? "" : "," %>
@@ -92,7 +92,7 @@
     </div>
   </div>
 </div>
-<script>
+<!-- <script>
     var owl;
     owl = $('.new-game');
     owl.owlCarousel({
@@ -101,6 +101,7 @@
         margin: 10,
         autoplay: true,
         autoplayTimeout: 1000,
-        autoplayHoverPause: true
+        autoplayHoverPause: true,
+        responsiveClass:true
     });
-</script>
+</script> -->
