--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -110,3 +110,15 @@
   </div>
 </div>
 
+<script>
+  var owl;
+  owl = $('.new-game');
+  owl.owlCarousel({
+    items: 4,
+    loop: true,
+    margin: 10,
+    autoplay: true,
+    navigation: true,
+    nav: true,
+  });
+</script>
