--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -9,15 +9,17 @@
     <div class="carousel-inner" role="listbox">
       
       <% @game_upcoming.each.with_index do |game, index| %>
-        <%= link_to game_detail_path(id: game.id) do%>
+ 
           <div class="item <%= index == 0 ? 'active' : '' %>">
+            <%= link_to game_detail_path(id: game.id) do%>
             <%= image_tag(game.photos.first.image_url, :alt => "First Slide") %>
             <div class="carousel-caption">
               <h2><%= game.name %></h2>
               <h1><%= game.relase_date.to_date %></h1>
           </div>
+             <%end%>
         </div>
-      <%end%>
+   
      
       <% end %>
     </div>
@@ -79,16 +81,19 @@
               </div>
               <div class="col-xs-12 col-md-6 fix-padding">
                 <div class="star_home_page stars-outer">
-                  <div class="stars-inner" style="width: <%= game.reviews.average(:rating).round(1)*20 + 6 %>%"></div>
+                  <div class="stars-inner" style="width: <%= game.reviews.average(:rating).round(1)*20 +3  %>%"></div>
                 </div>
                  <%= game.reviews.average(:rating).round(1) %>
               </div>
-              <div class="col-md-12">
+              <div class="col-xs-12 col-md-6">
                 <b>Platform: </b>
                 <% game.platform_of_game.each_with_index do |platform, index| %>
                   <%= index == 0 ? "" : "," %>
                   <%= link_to platform.name, game_game_list_of_platform_path(:platform => platform.name) %>
                 <% end %>
+              </div>
+              <div class="col-xs-12 col-md-6">
+                <%= game.reviews.where.not(:title => nil).count() %> rating
               </div>
               <div class="col-md-12">
                 <b>Genre: </b>
