--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,9 +21,16 @@
       </div>
       <div class="col-md-10" id="bs-example-navbar-collapse-1 ">
         <ul class="nav navbar-nav navbar-left">
-          <li><%= link_to Platform.first.name, game_game_list_of_platform_path(:platform => Platform.first.name), class: "page-scroll"%></li>
+          <% if Platform.first.present? %>
+          <li><%= link_to Platform.first.name, game_game_list_of_platform_path(:platform => Platform.first.name), class: "page-scroll" %></li>
+          <%end%>
+          <% if Platform.second.present? %>
           <li><%= link_to Platform.second.name, game_game_list_of_platform_path(:platform => Platform.second.name), class: "page-scroll" %></li>
+          <%end%>
+          <% if Platform.third.present? %>
           <li><%= link_to Platform.third.name, game_game_list_of_platform_path(:platform => Platform.third.name), class: "page-scroll" %></li>
+          <%end%>
+          
           <li class="dropdown">
             <a class="dropdown-toggle dropdown-background-color" data-toggle="dropdown" href="#">MORE
               <span class="caret"></span>
