--- a/app/views/game/_game_up_comming.html.erb
+++ b/app/views/game/_game_up_comming.html.erb
@@ -2,7 +2,10 @@
 <div class="col-md-12 text-center related-game ">Upcoming Game</div>
 <% @game_upcoming.each do |game| %>
     <div class="col-md-12 text-center list-related-game">
-        <a href="#"><strong> <%=link_to game_detail_path(id: game.id) do %> <%= game.name %><%end%></strong>
+          
+<%= image_tag(game.photos.first.image_url, :class => "img-responsive fix-box-img-top-game",  :size => "20x10" ) %>
+        <br>
+          <a><strong> <%=link_to game_detail_path(id: game.id) do %> <%= game.name %><%end%></strong>
           <br>
           <strong><%= game.relase_date.strftime("%F") %></strong>
         </a>
