--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -46,3 +46,203 @@
 a{
     text-decoration: none !important;
 }
+
+#menu {
+    background: rgba(128, 126, 126, 0.06) !important;
+}
+
+#menu a {
+    color:white !important;
+}
+
+#menu.navbar-default .navbar-nav > li > a:hover {
+    color:orange !important;
+}
+
+.logo span{
+    color:orangered;
+}
+
+.logo h1 {
+   padding-top:25px;
+}
+
+.search-header .form-group input{
+    border-radius: unset !important;
+}
+.search-header input[type="submit"]{
+    border-radius: unset !important;
+    padding: 8px 20px;
+    background: orangered;
+    color: #fff;
+    border: none !important;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.search-header input[type="submit"]:hover{
+    background: blue;
+    color: #fff;
+}
+
+#menu-item li a{
+    color:#000 !important;
+}
+
+#menu-item li {
+    border-bottom: 1px solid #e8e8e8;
+    padding-bottom: 5px;
+}
+
+#menu-item li:last-child {
+    border-bottom: none;
+}
+
+.background-item {
+    background: #3a3a3a !important;
+}
+
+.background-item a {
+    text-decoration: none;
+    color:rgb(224, 218, 218);
+}
+
+.background-item p {
+    color:rgb(224, 218, 218);
+}
+
+.more a,.read-more-62,.full_review a{
+    color:#ff7a49 !important;
+    font-weight: 600;
+
+}
+
+.box-content .pagination {
+    margin-left: 75px;
+}
+
+.box-content .pagination li a {
+    background: #3a3a3a;
+    color: #e8e8e8;
+}
+
+.box-content .pagination .previous_page a:hover {
+    background: #ff7a49 !important;
+    color:#fff;
+}
+
+.box-content .pagination .disabled a:hover {
+    background: #ff7a49 !important;
+    color:#fff;
+}
+
+.list-related-game a {
+    color:#fff !important;
+}
+
+.search-advance .form-control{
+    border-radius: unset !important;
+}
+
+.search-advance .btn {
+    padding: 5px 20px;
+    color: #fff;
+    font-weight: bold;
+    background: orangered;
+    border-radius: unset !important;
+    border:unset !important;
+}
+
+.search-advance .btn:hover {
+    color: #000;
+    background:#fff ;
+
+}
+
+
+#services .pagination {
+    margin-left: 75px;
+}
+
+#services .pagination li a {
+    background: #3a3a3a;
+    color: #e8e8e8;
+}
+
+#services .pagination .previous_page a:hover {
+    background: #ff7a49 !important;
+    color:#fff;
+}
+
+#services .pagination .disabled a:hover {
+    background: #ff7a49 !important;
+    color:#fff;
+}
+
+.jouhou a,p {
+    color: #fff;
+}
+
+.jouhou span a {
+    color: #cecece;
+}
+
+.create_review_button button {
+    padding: 13px 23px;
+    border-radius: unset !important;
+    font-size: 14px;
+    text-transform: uppercase;
+    font-weight: 600; 
+}
+
+.create_review_button {
+    margin-top: 47px !important;
+}
+
+.header_shousai_game {
+    float: left;
+    padding: 2px 20px !important;
+    margin-top: -1px !important;
+    margin-left: 15px;
+}
+
+.name-user a ,.name-user-replier a{
+    text-transform: uppercase;
+    color:#ccc;
+    font-size:18px;
+}
+
+.like_space{
+    float: left !important;
+    margin-right: 10px;
+}
+
+.comment_icon a .fa {
+    color:#11d261;
+}
+
+.img-game-review {
+    padding: 10px 0px 0px 0px;
+}
+
+.fix-content-comment-space  a {
+    text-decoration: none;
+    color:#fff;
+}
+
+
+// input[type="file"]
+// {
+//     display: none !important;
+// }
+// .avatar-choice label {
+//     color:#fff;
+//     font-weight: 200px !important;
+//     font-size:15px;
+//     padding: 2px 10px;
+//     background: #ff7a49;
+// }
+
+// .avatar-choice {
+//     border :none;
+// }
