--- a/app/views/game/index.html.erb
+++ b/app/views/game/index.html.erb
@@ -43,7 +43,6 @@
             <h2>New Games Release</h2>
           </div>
           <div class="col-md-12">
-
             <div class="owl-carousel new-game">
               <% @game_news.each do |game| %>
               <div class="container-top-game">
@@ -65,14 +64,14 @@
             <h2>Top Games</h2>
           </div>
           <% @game_top.each do |game| %>
-          <div class="col-md-12 fix-pading-content">
+          <div class="col-md-12 fix-pading-content ">
             <div class="col-xs-12 col-md-4">
               <% if game.photos.first%>
               <%=link_to game_detail_path(id: game.id) do %> 
               <%= image_tag(game.photos.first.image_url, :class => "img-responsive fix-box-img-top-game", :crop => :fill) %><%end%>
               <% end %>
             </div>
-            <div class="col-xs-12 col-md-8 content-game-home-page">
+            <div class="col-xs-12 col-md-8 content-game-home-page background-item">
               <div class="col-md-12">
                 <%=link_to game_detail_path(id: game.id),{:class=>"name_game"} do %> <%= game.name %><%end%>
               </div>
@@ -104,7 +103,7 @@
               </div>
               <div class="col-md-12">
                 <% if game.summary.length > 100 %>
-                  <p><%= truncate(game.summary, length: 100) %> <%=link_to "more", game_detail_path(id: game.id) %></p>
+                  <p class="more"><%= truncate(game.summary, length: 100) %> <%=link_to "more", game_detail_path(id: game.id) %></p>
                 <% else %>
                   <p><%= game.summary %></p>
                 <% end %>
@@ -117,7 +116,7 @@
         </div>
       </div>
       <!-- Search & Upcoming games list -->
-      <div class="col-md-3">
+      <div class="col-md-3 search-advance">
         <%= render 'search/advance_search_box' %>
         <%= render 'game_up_comming' %>
       </div>
