--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -11,7 +11,7 @@
     <div class="row">
       <div class="col-md-9">
         <div class="col-md-12">
-          <div class="col-xs-12 col-md-4">
+          <div class="col-xs-12 col-md-4 img-game-review">
             <%= link_to game_detail_path(id: @review.game_id) do %>
               <%= image_tag(@game.photos.first.image_url, :class => "img-responsive") %>
             <% end %>
@@ -29,7 +29,6 @@
               </div>
               <br>
               <p>created by <%= @review.user.full_name %> at <%= @review.created_at.to_date %></p>
-              <hr>
               <!--<div id="send_like_<%= @review.id %>_Review">-->
               <!--
               <% if user_signed_in? and @review.likes.where(user_id: current_user.id).count != 0 %>-->
@@ -55,8 +54,9 @@
               <% end %>-->
               <!--</div>-->
               <%= render "reviews/like", object: @review %>
-              <hr>
-            </div>
+              <br>
+              <br>
+              </div>
           </div>
           <div class="col-md-12">
             <p><%= raw @review.content %></p>
@@ -82,7 +82,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 search-advance">
         <%= render 'search/advance_search_box' %>
         <!--        should be upcoming game -->
       </div>
