--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -47,7 +47,7 @@
                   <%= link_to game_detail_path(id: game.id) do %> <%= image_tag(game.photos.first.image_url, :class => "img-responsive fix-box-img-top-game") %>
                   <% end %>
                 </div>
-                <div class="col-xs-12 col-md-8 content-game-home-page">
+                <div class="col-xs-12 col-md-8 content-game-home-page background-item ">
                   <div class="col-md-12">
                     <%= link_to game_detail_path(id: game.id),{:class=>"name_game"}  do %> <%= game.name %>
                       <% end %>
