--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -1,4 +1,5 @@
 <%= render 'page_title', title: 'Game detail' %>
+<% @g = Game.find_by_id(params[:id]) %>
 <div id="about">
   <div class="container">
     <div class="row">
